--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
         </script>
     </head>
 <body class="container-fluid">
-    <header class="row">
+    <header class="row" style="z-index: 9;">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
                 <a class="col-12 col-sm-12" id="menu" type="button" data-toggle="collapse" data-target="#sawnavbar" aria-controls="sawnavbar" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></a>
@@ -63,7 +63,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <img id="unc" class="col-12 col-sm-8 col-lg-6" src="unc_logo.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry Minor, Neuroscience Minor</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - (May 2022)</i></p>
+                <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
