--- a/experience.html
+++ b/experience.html
@@ -30,7 +30,7 @@
     </head>
 
 <body class="container-fluid">
-    <header class="row">
+    <header class="row" style="z-index: 9;">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
                 <a class="col-12 col-sm-12" id="menu" type="button" data-toggle="collapse" data-target="#sawnavbar" aria-controls="sawnavbar" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></a>
@@ -63,17 +63,49 @@
         <section class="col-12 col-sm-12 experience">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Technician</h4>
+                <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
+                <p class="col-12 col-sm-12 e-time"><i>May 2022 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="MountainEyeAssociates.jpg" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Mountain Eye Associates</a>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
+                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
+                <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
+                    <li class="col-12 col-sm-11">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
+                    <li class="col-12 col-sm-11">Develops knowledge regarding the physics of the camera body and equipment used to capture images in differing environments</li>
+                    <li class="col-12 col-sm-11">Generates a user-friendly and exciting customer experience both online and during the session</li>
+                    <li class="col-12 col-sm-11">Organizes a business plan that favors the client's needs and generates income for the business</li>
+                    <li class="col-12 col-sm-11">Donates 10 percent of profits to a local nonprofit, 501(c)(3), organization</li>
+                    <li class="col-12 col-sm-11">Serves over 50 clients across multiple counties in North Carolina</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <a href="https://stephenawenzel.github.io/stephenwenzelphotography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-11">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-11">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
-                    <li class="col-12 col-sm-11">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
-                    <li class="col-12 col-sm-11">Generates and executes experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-11">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
-                    <li class="col-12 col-sm-11">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
+                    <li class="col-12 col-sm-11">Analyzed and critiqued published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-11">Generated next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
+                    <li class="col-12 col-sm-11">Operated a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
+                    <li class="col-12 col-sm-11">Generated and executed experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-11">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -85,13 +117,13 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-11">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-11">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-11">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-11">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
+                    <li class="col-12 col-sm-11">Generated study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
+                    <li class="col-12 col-sm-11">Provided aid through learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-11">Collaborated with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-11">Developed problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -103,40 +135,20 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-11">Serves the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
-                    <li class="col-12 col-sm-11">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
-                    <li class="col-12 col-sm-11">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
-                    <li class="col-12 col-sm-11">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
-                    <li class="col-12 col-sm-11">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
-                    <li class="col-12 col-sm-11">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
+                    <li class="col-12 col-sm-11">Served the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
+                    <li class="col-12 col-sm-11">Respectfully communicated with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
+                    <li class="col-12 col-sm-11">Demonstrated understanding of how cultures, values, and morals impact behavior and health care decisions</li>
+                    <li class="col-12 col-sm-11">Acted to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
+                    <li class="col-12 col-sm-11">Served as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-11">Volunteered in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
-                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Mar 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-11">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
-                    <li class="col-12 col-sm-11">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
-                    <li class="col-12 col-sm-11">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
-                    <li class="col-12 col-sm-11">Generates a user-friendly and exciting customer experience both online and during the session</li>
-                    <li class="col-12 col-sm-11">Organizes a business plan that favors the client's needs and generates income for the business</li>
-                    <li class="col-12 col-sm-11">Donates 10 percent of profits to a local nonprofit, 501(c)(3), organization</li>
-                    <li class="col-12 col-sm-11">Serves over 50 clients across multiple counties in North Carolina</li>
-                </ul>
-            </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image functionalities')">
-                <a href="https://stephenawenzel.github.io/stephenwenzelphotography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
