--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
 
 <body class="container-fluid">
-    <header class="row">
+    <header class="row" style="z-index: 9;">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
                 <a class="col-12 col-sm-12" id="menu" type="button" data-toggle="collapse" data-target="#sawnavbar" aria-controls="sawnavbar" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></a>
@@ -66,7 +66,7 @@
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image functionalities')">
-                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE RESUME</p>
+                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
             </article>
         </section>
     </main>
