--- a/printing.html
+++ b/printing.html
@@ -59,45 +59,21 @@
 <!----> <section class="col-12 col-sm-12 group">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
-                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>January 2022 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Analyzes and critiques published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
-                    <li class="col-12 col-sm-12">Generates next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
-                    <li class="col-12 col-sm-12">Operates a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
-                    <li class="col-12 col-sm-12">Generates and executes experiments with rigor and reproducibility</li>
-                    <li class="col-12 col-sm-12">Analyzes, quantifies, and presents data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
-                    <li class="col-12 col-sm-12">Programs in R, as well as HTML and CSS, in order to create meaningful graphs and figures</li>
-                </ul>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
-                <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Generates study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-12">Provides aid through learning strategies, concept review, upper-level thinking questions for students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborates with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-12">Develops problem-solving skills in order to maximize potential as a peer mentor</li>
-                </ul>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
-                <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Serves the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
-                    <li class="col-12 col-sm-12">Respectfully communicates with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
-                    <li class="col-12 col-sm-12">Demonstrates understanding of how cultures, values, and morals impact behavior and health care decisions</li>
-                    <li class="col-12 col-sm-12">Acts to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
-                    <li class="col-12 col-sm-12">Serves as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
-                    <li class="col-12 col-sm-12">Volunteers in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Technician</h4>
+                <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
+                <p class="col-12 col-sm-12 e-time"><i>May 2022 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Assists Ophthalmologists/Optometrists treating patients with various visual conditions</li>
+                    <li class="col-12 col-sm-12">Develops relationships with patients while following Physician orders</li>
+                    <li class="col-12 col-sm-12">Works with patients to choose the best-fit eyewear - contacts, glasses, bifocals, trifocals</li>
+                    <li class="col-12 col-sm-12">Instructs patients on the proper utilization of contact lens and eyeglass use/care</li>
+                    <li class="col-12 col-sm-12">Documents appointment details, maintaining patient charts with detailed notes</li>
+                    <li class="col-12 col-sm-12">Administrates visual field tests, eye drop administration for dilation, tonometry, fluorescein angiography gdx, refract patients, etc</li>
+                    <li class="col-12 col-sm-12">Assists doctors in minor surgeries</li>
+                    <li class="col-12 col-sm-12">Cleans and sterilizes equipment and cleanes the work environment/patient rooms</li>
+                    <li class="col-12 col-sm-12">Provides proper drops to prepare patients for Yag surgeries</li>
+                    <li class="col-12 col-sm-12">Educates patients/families on surgery details, complications, and after-care</li>
                 </ul>
             </article>
 
@@ -109,11 +85,53 @@
                 <ul clas="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Manages the production and editing of images using Adobe Suite: Photoshop and Lightroom</li>
                     <li class="col-12 col-sm-12">Communicates with clients to efficiently and creatively portray them in contrast with their surroundings</li>
-                    <li class="col-12 col-sm-12">Develops knowledge regarding physics of the camera body and equipment used to capture images in differing environments</li>
+                    <li class="col-12 col-sm-12">Develops knowledge regarding the physics of the camera body and equipment used to capture images in differing environments</li>
                     <li class="col-12 col-sm-12">Generates a user-friendly and exciting customer experience both online and during the session</li>
                     <li class="col-12 col-sm-12">Organizes a business plan that favors the client's needs and generates income for the business</li>
-                    <li class="col-12 col-sm-12">Donates 15 percent of profits to a local nonprofit, 501(c)(3), organization</li>
+                    <li class="col-12 col-sm-12">Donates 10 percent of profits to a local nonprofit, 501(c)(3), organization</li>
                     <li class="col-12 col-sm-12">Serves over 50 clients across multiple counties in North Carolina</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
+                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
+                <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Analyzed and critiqued published scientific literature pertaining to the effects of drug treatments on acetylated and de-acetylated microtubules in <i>D. melanogaster</i></li>
+                    <li class="col-12 col-sm-12">Generated next-step hypotheses and means to test those hypotheses from information gathered by previously conducted experiments</li>
+                    <li class="col-12 col-sm-12">Operated a fluorescence microscope (Nikon Eclipse Ti) along with a confocal lens in order to capture kymographs of mitochondria movement along microtubules, tracking displacement and analyzing for velocity and acceleration given various drug treatments</li>
+                    <li class="col-12 col-sm-12">Generated and executed experiments with rigor and reproducibility</li>
+                    <li class="col-12 col-sm-12">Analyzed, quantified, and presented data in order to effectively explain experimental results to individuals both within and outside of the scientific community</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
+                <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Generated study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
+                    <li class="col-12 col-sm-12">Provided aid through learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-12">Collaborated with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-12">Developed problem-solving skills in order to maximize potential as a peer mentor</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
+                <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
+                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Served the students, faculty, and staff at UNC Chapel Hill in order to keep the university open during the course of the COVID-19 pandemic</li>
+                    <li class="col-12 col-sm-12">Respectfully communicated with a diverse population of individuals in order to ensure a valuable and helpful experience</li>
+                    <li class="col-12 col-sm-12">Demonstrated understanding of how cultures, values, and morals impact behavior and health care decisions</li>
+                    <li class="col-12 col-sm-12">Acted to remove potential communication barriers between volunteers and the public, acting to further the mission of the organization</li>
+                    <li class="col-12 col-sm-12">Served as a valuable resource for individuals testing for COVID-19 by staying up-to-date on current safe practices regarding testing and the pandemic</li>
+                    <li class="col-12 col-sm-12">Volunteered in order to help an organization aiming to minimize the spread of the variants of COVID-19</li>
                 </ul>
             </article>
 
@@ -131,7 +149,8 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <!--Added extra margin and padding so that it can go to the next page-->
+            <article  id="extra_margin" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
@@ -143,8 +162,7 @@
                 </ul>
             </article>
 
-            <!--Added extra margin and padding so that it can go to the next page-->
-            <article id="extra_margin" class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
@@ -208,9 +226,8 @@
                     <li class="col-12 col-sm-12">Front-End Web Design (HTML5, CSS3)</li>
                     <li class="col-12 col-sm-12">(MEGA11) Molecular Evolutionary Genetics Analysis Version 11</li>
                     <li class="col-12 col-sm-12">NMR Spectrometry</li>
-                    <li class="col-12 col-sm-12">R for Data Science</li>
                     <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
-                    <li class="col-12 col-sm-12">Writing for Scientific Projects</li>
+                    <li class="col-12 col-sm-12">Writing for Scientific Publications</li>
                 </ul>
                 <h4 class="col-12 col-sm-12 e-titles">Soft Skills</h4>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
