--- a/skills.html
+++ b/skills.html
@@ -76,10 +76,9 @@
                     <li class="col-12 col-sm-12 col-lg-6">Front-End Web Design (HTML5, CSS3)</li>
                     <li class="col-12 col-sm-12 col-lg-6">(MEGA11) Molecular Evolutionary Genetics Analysis Version 11</li>
                     <li class="col-12 col-sm-12 col-lg-6">NMR Spectrometry</li>
-                    <li class="col-12 col-sm-12 col-lg-6">R for Data Science</li>
                     <li class="col-12 col-sm-12 col-lg-6">Solvent-Solvent Extractions</li>
                     <li class="col-12 col-sm-12 col-lg-6">UV-Vis Spectrometry</li>
-                    <li class="col-12 col-sm-12 col-lg-6">Writing for Scientific Projects</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Writing for Scientific Publications</li>
                 </ul>
                 <h5 class="col-12 col-sm-12 e-co"><u>Soft Skills</u></h5>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
